# packing-checklist

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html  run_tests.Dockerfile
.github/workflows/: build_and_test.yml
bulma-checkboxes/: main.min.css
mock_html/: index.html  templates.html  trip_edit.html  trip_name.html  trips.html
scripts/: build.sh  installProdDeps.sh  installTestDeps.sh  test.py
src/: config.rs  main.rs
src/components/: breadcrumbs.rs  config_provider.rs  header_bar.rs  incorrect_config.rs  mod.rs  recent_widget.rs  trips_widget.rs  user_context_provider.rs
src/firebase/: auth.rs  auth_errors.rs  mod.rs  types.rs
src/routes/: home.rs  mod.rs  trips.rs
src/types/: auth.rs  mod.rs
