[package]
name = "packing-checklist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"

log = "0.4.6"
wasm-logger = "0.2.0"

serde = "1.0.144"
serde_json = "1.0.85"

reqwest = { version = "0.11.12", features = ["json"] }
url = "2.3.1"

[dev-dependencies]
k9 = "0.11.5"
mockito = "0.31.0"
tokio-test = "0.4.2"
